- [+] scripts/Makefile.host			[D] Add new features to Makefile.
- [M] scripts/Makefile.build			 >  Basiclly, it is a TOTAL REWRITE.
- [M] scripts/Makefile.lib			 >  It is *not* easy.
- [M] scripts/Kbuild.include
- [M] Makefile					[D] Rewrite. Based on linux-4.1


Sun Sep 13 CST 2015
- [+] Diary/09-13-2015
- [+] arch/x86/Makefile
- [+] arch/x86/boot/*				[D] Renamed from boo/
- [+] arch/x86/configs/i386_defconfig		[D] Empty
- [+] arch/x86/kernel/Makefile			[D] Empty
- [+] arch/x86/lib/Makefile			[D] Empty
- [+] arch/x86/mm/Makefile			[D] Empty
- [+] arch/x86/pci/Makefile			[D] Empty. To show $(drivers-y)
- [+] scripts/Makefile.flags			[D] Compiler and Linker flags
- [M] scripts/Makefile.clean			[D] Clean hostprogs


Mon Sep 14 CST 2015
- [+] arch/x86/configs/i386_defconfig		[D] To be added
- [M] arch/x86/Makefile				[D] Add flags
- [M] arch/x86/boot/Makefile			[D] build bzImage


Tue Sep 15 CST 2015
- [+] Diary/09-15-2015
- [M] arch/x86/Makefile				[D] Remove -mregparm=3 from REALMODEFLAGS
- [M] arch/x86/boot/header.S			[D] Add more header datas, for future
-						 >  boot loader support.
- [M] arch/x86/include/asm/*			[D] Move from include/asm/*


Wed Sep 16 CST 2015
- [M] Makefile					[D] --silentoldconfig
-						 >  let Kconfig build include/config/*
-						 >  and include/generated/*
-						 >  Also, we add version.h and utsrelease.h
- [M] scripts/Makefile.build			[D] OK, using .cmd file only!
-						 >  Since fixdep works so well, .d file can NOT
-						 >  be included any more! We want the fixed
-						 >  dependency list to work.
- [M] scripts/basic/fixdep.c			[D] Change linux to sandix


Thu Sep 17 CST 2015
- [+] Diary/09-17-2015				[D] Some words about Makefile
- [+] include/sandix/kconfig.h			[D] IMPORTANT
- [+] Makefile					[D] -include include/sandix/kconfig.h
- [+] scripts/mkcompile_h.sh			[D] Generate: include/generate/compile.h
- [M] arch/x86/boot/tools/build.c		[D] Fill holes header.S
- [M] arch/x86/boot/bootloader.S		[D] Fit linux boot protocol